<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/txtMenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="Menu"
        android:textSize="26dp"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMenuIluminacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnMenuIluminacao"
        android:onClick="viewIluminacao"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuJardim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMenu" />

    <Button
        android:id="@+id/btnMenuJardim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnMenuJardim"
        android:onClick="viewJardim"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuJanelas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuIluminacao" />

    <Button
        android:id="@+id/btnMenuJanelas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnMenuJanelas"
        android:onClick="viewJanelas"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuCameras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuJardim" />

    <Button
        android:id="@+id/btnMenuCameras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btnMenuCameras"
        android:onClick="viewCameras"
        app:layout_constraintBottom_toTopOf="@+id/btnMenuStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuJanelas" />

    <Button
        android:id="@+id/btnMenuStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginBottom="150dp"
        android:text="@string/btnMenuStatus"
        android:onClick="viewStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMenuCameras" />

</androidx.constraintlayout.widget.ConstraintLayout>